--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.21.1",
     "graphql": "^16.9.0",
     "http": "^0.0.1-security",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.8.3"
   }
 }
