--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=9000
 MONGO_URL=mongodb+srv://karpenkostas:monDB1307@cluster0.mqu1iex.mongodb.net/jobs-api?retryWrites=true&w=majority
-JWT_SECRET=''
+
+JWT_SECRET=CWXI5yOvaMQwqz9lZ7S7UyVNMRv5qsHZ
+JWT_LIFETIME=30d
