--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
       "baseUrl": "src",
       "outDir": "dist",
       "sourceMap": true,
-      "noImplicitAny": true
+      "noImplicitAny": true,
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "types/*.d.ts"]
   }
  
